// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#329932",
        "borderColor": "#329932",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "#141313",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#0e0e0e",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "#141313",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with activePower and items) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#329932",
        "borderColor": "#329932",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "#141313",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#0e0e0e",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "#141313",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#329932",
            "fontFamily": "telegrama_raw",
            "fontSize": 6,
            "marginLeft": 9,
            "marginTop": 15,
          }
        }
      >
        PowerName | |==------------------------------------------------|   2% 00:00:09
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with activePower) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#329932",
        "borderColor": "#329932",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "#141313",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#0e0e0e",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "#141313",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#329932",
            "fontFamily": "telegrama_raw",
            "fontSize": 6,
            "marginLeft": 9,
            "marginTop": 15,
          }
        }
      >
        PowerName | |==------------------------------------------------|   2% 00:00:09
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with items) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#329932",
        "borderColor": "#329932",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "#141313",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#0e0e0e",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "#141313",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
          <Image
            source={1}
            style={
              Object {
                "height": 16,
                "margin": 4,
                "width": 16,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
